<resources>
    <string name="app_name" translatable="false">Diary</string>
    <string-array name="days">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
    </string-array>
    <string-array name="types">
        <item>@string/lecture</item>
        <item>@string/practice</item>
    </string-array>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="add">Add</string>
    <string name="name">Name*</string>
    <string name="teacher_s_email">Teacher\'s email</string>
    <string name="subject_s_website">Subject\'s website</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="homework">Homework</string>
    <string name="subjects">Subjects</string>
    <string name="add_homework">Add Homework</string>
    <string name="deadline">Deadline*</string>
    <string name="task">Task*</string>
    <string name="deadline_time">Deadline Time*</string>
    <string name="choose">Choose</string>
    <string name="deadline_date">Deadline Date*</string>
    <string name="language">language</string>
    <string name="location">Location</string>
    <string name="duration">Duration*</string>
    <string name="subject_name">Subject name</string>
    <string name="english">English</string>
    <string name="slovak">Slovak</string>
    <string name="russian">Russian</string>

    <string name="homework_was_removed">Homework was successfully removed</string>
    <string name="homework_was_added">Homework was successfully added</string>
    <string name="homework_exists">Homework already exists</string>

    <string name="subject_was_removed">Subject was successfully removed</string>
    <string name="subject_was_added">Subject was successfully added</string>
    <string name="subject_exists">Subject already exists</string>

    <string name="lesson_was_removed">Lesson was successfully removed</string>
    <string name="lesson_was_added">Lesson was successfully added</string>

    <string name="fill_all_fields">Fill all necessary fields first</string>
    <string name="email_isnt_provided">Teacher\'s email is not provided</string>
    <string name="send_email">Send email…</string>
    <string name="no_email_client_installed">There is no email client installed</string>
    <string name="site_not_provided">Site is not provided</string>
    <string name="undo">UNDO</string>
    <string name="time">Time*</string>
    <string name="type">Type</string>
    <string name="lecture">Lecture</string>
    <string name="practice">Practice</string>
</resources>
