<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context=".activities.EditSubjectActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="25dp">

        <EditText
            android:id="@+id/subjectName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/teacher_s_email" />

        <EditText
            android:id="@+id/site"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/subject_s_website" />

        <Button
            android:id="@+id/saveSubjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="saveSubject"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>