<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context=".activities.AddHomeworkActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="25dp">

        <Spinner
            android:id="@+id/subject_name"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:hint="@string/task" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="278dp"
                android:layout_height="50dp"
                android:hint="@string/deadline_date" />

            <ImageButton
                android:layout_width="83dp"
                android:layout_height="50dp"
                android:onClick="onChooseDateButtonClick"
                android:src="@drawable/ic_baseline_calendar_today_24"
                android:text="@string/choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="278dp"
                android:layout_height="50dp"
                android:hint="@string/deadline_time" />

            <ImageButton
                android:layout_width="83dp"
                android:layout_height="50dp"
                android:onClick="onChooseTimeButtonClick"
                android:src="@drawable/ic_baseline_watch_later_24"
                android:text="@string/choose" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/removeHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="removeHomework"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/saveHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="saveHomework"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>