<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.github.dexluthor.diary.fragment.ChooseWhatToCreateDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_homework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="onAddHomeworkButtonClick"
            android:text="@string/add_homework" />


        <Button
            android:id="@+id/add_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="onAddLessonButtonClick"
            android:text="@string/add_lesson" />


        <Button
            android:id="@+id/add_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddSubjectButtonClick"
            android:text="@string/add_subject" />
    </LinearLayout>
</LinearLayout>